[tool.poetry]
name = "iris"
version = "0.1.0"
description = ""
authors = ["Akansha"]

[tool.poetry.dependencies]
python = "3.9.6"
numpy = "^1.23.2"
pandas = "^1.4.3"
scikit-learn = "^1.1.2"
xgboost = "^1.6.1"
lightgbm = "^3.3.2"
catboost = "^1.0.6"
pydantic = "^1.9.2"
matplotlib = "^3.5.3"
plotnine = "^0.9.0"
streamlit = "^1.12.0"
optuna = "^2.10.1"
tqdm = "^4.64.0"
colorama = "^0.4.5"
wandb = "^0.13.1"
loguru = "^0.6.0"
mlxtend = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"